--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 my.greeting=Hey Suckas!
+
 app.name=My app
 app.description=Welcome to ${app.name}
+
+my.list.values=One, Two, Three
+
+dbValues={connectionString: 'http://__', userName: 'Karl', password: 'pass'}
