--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -13,5 +13,45 @@
     "name": "my.greeting",
     "type": "java.lang.String",
     "description": "A description for 'my.greeting'"
+  },
+  {
+    "name": "dbValues",
+    "type": "java.lang.String",
+    "description": "A description for 'dbValues'"
+  },
+  {
+    "name": "my.list.values",
+    "type": "java.lang.String",
+    "description": "A description for 'my.list.values'"
+  },
+  {
+    "name": "db.port",
+    "type": "java.lang.String",
+    "description": "A description for 'db.port'"
+  },
+  {
+    "name": "db.host",
+    "type": "java.lang.String",
+    "description": "A description for 'db.host'"
+  },
+  {
+    "name": "db.connection",
+    "type": "java.lang.String",
+    "description": "A description for 'db.connection'"
+  },
+  {
+    "name": "dbValues",
+    "type": "java.lang.String",
+    "description": "A description for 'dbValues'"
+  },
+  {
+    "name": "dbValues",
+    "type": "java.lang.String",
+    "description": "A description for 'dbValues'"
+  },
+  {
+    "name": "dbValues",
+    "type": "java.lang.String",
+    "description": "A description for 'dbValues'"
   }
 ]}
