--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 app:
   description: Welcome to ${app.name}
   name: My app
-db:
-  connection: connection-string-here
-  host: 127.0.0.1
-  port: 1200
+#db:
+#  connection: connection-string-here
+#  host: 127.0.0.1
+#  port: 1200
 
 dbValues: '{connectionString: ''http://__'', userName: ''Karl'', password: ''pass''}'
 management:
@@ -17,7 +17,16 @@ my:
   list:
     values: One, Two, Three
 
+#spring:
+#  profiles:
+#    active:
+#    - test
+
 spring:
-  profiles:
-    active:
-    - test
+  cloud:
+    config:
+      uri:
+      - http://localhost:8888
+
+  application:
+    name: spring-boot-config
